--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,37 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+# Default dev profile from:
+#   https://doc.rust-lang.org/cargo/reference/profiles.html#dev
+[profile.dev]
+opt-level = 0
+debug = true
+#split-debuginfo = '...'  # Platform-specific.
+debug-assertions = true
+overflow-checks = true
+lto = false
+panic = 'unwind'
+incremental = true
+codegen-units = 256
+rpath = false
+
+# Default dev profile from:
+#   https://doc.rust-lang.org/cargo/reference/profiles.html#release
+[profile.release]
+opt-level = 3
+debug = false
+#split-debuginfo = '...'  # Platform-specific.
+debug-assertions = false
+overflow-checks = false
+lto = false
+panic = 'unwind'
+incremental = false
+codegen-units = 16
+rpath = false
+
+[profile.my-dev]
+inherits = "dev"
+
+[profile.my-rel]
+inherits = "release"
