--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ debug = true
 #split-debuginfo = '...'  # Platform-specific.
 debug-assertions = true
 overflow-checks = true
-lto = false
+lto = true
 panic = 'unwind'
 incremental = true
 codegen-units = 256
@@ -31,7 +31,7 @@ debug = false
 #split-debuginfo = '...'  # Platform-specific.
 debug-assertions = false
 overflow-checks = false
-lto = false
+lto = true
 panic = 'unwind'
 incremental = false
 codegen-units = 16
