feat: Move changes my-dev and my-rel
Instead of changing "bases".

No size change:

  $ ./mke
  -rwxr-xr-x 2 wink users 611K Nov 12 10:49 target/my-dev/exper-refcell
  -rwxr-xr-x 2 wink users 279K Nov 12 10:49 target/my-rel/exper-refcell
     Compiling exper-refcell v0.1.0 (/home/wink/prgs/rust/myrepos/exper-refcell)
      Finished my-dev [unoptimized + debuginfo] target(s) in 1.65s
       Running `target/my-dev/exper-refcell`
  thread 'main' panicked at 'explicit panic', src/main.rs:53:5
  note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
     Compiling exper-refcell v0.1.0 (/home/wink/prgs/rust/myrepos/exper-refcell)
      Finished my-rel [optimized] target(s) in 2.23s
       Running `target/my-rel/exper-refcell`
  -rwxr-xr-x 2 wink users 611K Nov 12 10:54 target/my-dev/exper-refcell
  -rwxr-xr-x 2 wink users 279K Nov 12 10:54 target/my-rel/exper-refcell

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ debug = true
 #split-debuginfo = '...'  # Platform-specific.
 debug-assertions = true
 overflow-checks = true
-lto = true
+lto = false
 panic = 'unwind'
 incremental = true
 codegen-units = 256
@@ -31,7 +31,7 @@ debug = false
 #split-debuginfo = '...'  # Platform-specific.
 debug-assertions = false
 overflow-checks = false
-lto = true
+lto = false
 panic = 'unwind'
 incremental = false
 codegen-units = 16
@@ -40,7 +40,11 @@ rpath = false
 [profile.my-dev]
 inherits = "dev"
 strip = true
+lto = true
+codegen-units = 1
 
 [profile.my-rel]
 inherits = "release"
 strip = true
+lto = true
+codegen-units = 1
