feat: Use panic = "abort"
Slight reduction in size:

  $ ./mke
  -rwxr-xr-x 2 wink users 611K Nov 12 10:54 target/my-dev/exper-refcell
  -rwxr-xr-x 2 wink users 279K Nov 12 10:54 target/my-rel/exper-refcell
     Compiling exper-refcell v0.1.0 (/home/wink/prgs/rust/myrepos/exper-refcell)
      Finished my-dev [unoptimized + debuginfo] target(s) in 1.73s
       Running `target/my-dev/exper-refcell`
  thread 'main' panicked at 'explicit panic', src/main.rs:53:5
  note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
  ./mke: line 3: 16539 Aborted                 (core dumped) cargo run --profile my-dev
     Compiling exper-refcell v0.1.0 (/home/wink/prgs/rust/myrepos/exper-refcell)
      Finished my-rel [optimized] target(s) in 2.26s
       Running `target/my-rel/exper-refcell`
  -rwxr-xr-x 2 wink users 607K Nov 12 10:58 target/my-dev/exper-refcell
  -rwxr-xr-x 2 wink users 275K Nov 12 10:58 target/my-rel/exper-refcell

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,9 +42,11 @@ inherits = "dev"
 strip = true
 lto = true
 codegen-units = 1
+panic = "abort"
 
 [profile.my-rel]
 inherits = "release"
 strip = true
 lto = true
 codegen-units = 1
+panic = "abort"
