feat: no-main and no-std
Significantly smalller; my-dev 591K -> 22K, my-rel 275K -> 14K

  -rwxr-xr-x 2 wink users 591K Nov 13 08:13 target/my-dev/exper-refcell
  -rwxr-xr-x 2 wink users 275K Nov 13 08:14 target/my-rel/exper-refcell
     Compiling compiler_builtins v0.1.82
     Compiling core v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core)
     Compiling libc v0.2.135
     Compiling cc v1.0.73
     Compiling std v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/std)
     Compiling libc v0.2.137
     Compiling unwind v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/unwind)
     Compiling rustc-std-workspace-core v1.99.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-core)
     Compiling alloc v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc)
     Compiling cfg-if v1.0.0
     Compiling rustc-demangle v0.1.21
     Compiling rustc-std-workspace-alloc v1.99.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-alloc)
     Compiling panic_abort v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_abort)
     Compiling panic_unwind v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_unwind)
     Compiling std_detect v0.1.5 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/stdarch/crates/std_detect)
     Compiling hashbrown v0.12.3
     Compiling proc_macro v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/proc_macro)
     Compiling exper-refcell v0.1.0 (/home/wink/prgs/rust/myrepos/exper-refcell)
      Finished my-dev [unoptimized + debugin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = { version = "0.2", default-features = false }
 
 # Default dev profile from:
 #   https://doc.rust-lang.org/cargo/reference/profiles.html#dev
