feat: Change opt-level to 0
So with opt-level 0 for my-dev and my-std both fail and size is the same for both:

  -rwxr-xr-x 2 wink users 22K Nov 13 08:24 target/my-dev/exper-refcell
  -rwxr-xr-x 2 wink users 14K Nov 13 08:24 target/my-rel/exper-refcell
      Compiling compiler_builtins v0.1.82
     Compiling core v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core)
     Compiling libc v0.2.135
     Compiling cc v1.0.73
     Compiling std v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/std)
     Compiling libc v0.2.137
     Compiling unwind v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/unwind)
     Compiling rustc-std-workspace-core v1.99.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-core)
     Compiling alloc v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc)
     Compiling cfg-if v1.0.0
     Compiling rustc-demangle v0.1.21
     Compiling rustc-std-workspace-alloc v1.99.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-alloc)
     Compiling panic_abort v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_abort)
     Compiling panic_unwind v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_unwind)
     Compiling hashbrown v0.12.3
     Compiling std_detect v0.1.5 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/stdarch/crates/std_detect)
     Compiling proc_macro v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/proc_macro)
     Compiling exper-refcell v0.1.0 (/home/wink/prgs/rust/myrepos/exper-refcell)
      Finished my-dev 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ strip = true
 lto = true
 codegen-units = 1
 panic = "abort"
+opt-level = 0
 
 [profile.my-rel]
 inherits = "release"
@@ -51,3 +52,4 @@ strip = true
 lto = true
 codegen-units = 1
 panic = "abort"
+opt-level = 0
