feat: Change lto to false and codegen-unit to 16
A little smaller 22K -> 18K and 14K

  -rwxr-xr-x 2 wink users 22K Nov 13 08:33 target/my-dev/exper-refcell
  -rwxr-xr-x 2 wink users 22K Nov 13 08:33 target/my-rel/exper-refcell
     Compiling compiler_builtins v0.1.82
     Compiling core v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core)
     Compiling libc v0.2.135
     Compiling cc v1.0.73
     Compiling std v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/std)
     Compiling libc v0.2.137
     Compiling unwind v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/unwind)
     Compiling rustc-std-workspace-core v1.99.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-core)
     Compiling alloc v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc)
     Compiling cfg-if v1.0.0
     Compiling rustc-demangle v0.1.21
     Compiling rustc-std-workspace-alloc v1.99.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-alloc)
     Compiling panic_abort v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_abort)
     Compiling panic_unwind v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_unwind)
     Compiling hashbrown v0.12.3
     Compiling std_detect v0.1.5 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/stdarch/crates/std_detect)
     Compiling proc_macro v0.0.0 (/home/wink/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/proc_macro)
     Compiling exper-refcell v0.1.0 (/home/wink/prgs/rust/myrepos/exper-refcell)
      Finished my-dev [unoptimized + debuginfo] t

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,15 +41,15 @@ rpath = false
 [profile.my-dev]
 inherits = "dev"
 strip = true
-lto = true
-codegen-units = 1
+lto = false
+codegen-units = 16
 panic = "abort"
 opt-level = 0
 
 [profile.my-rel]
 inherits = "release"
 strip = true
-lto = true
-codegen-units = 1
+lto = false
+codegen-units = 16
 panic = "abort"
-opt-level = 0
+opt-level = 1
