--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+memoffset = "0.7.1"
 
 # Default dev profile from:
 #   https://doc.rust-lang.org/cargo/reference/profiles.html#dev
